cmake/Modules/try_search_sanitizer_library.c
@@ -1,0 +1,2 @@
+// Minimal C file which is used by try_search_sanitizer_library().
+int main() { return 0; }
